# TestCPP

./: .gitignore  .gitmodules  CMakeLists.txt
include/SimpleNet/: config.h
src/: Rectangle.cpp  config.cpp.in
tests/: CMakeLists.txt  SomeClass_test.cpp  SomeClass_test.hpp  main.cpp
